# src/main/java/br/com/peoplemanager/controller/PersonController.java
@@ -1,27 +1,14 @@
 package br.com.peoplemanager.controller;
 
-import br.com.peoplemanager.dto.person.PersonRequestDto;
-import br.com.peoplemanager.dto.person.PersonResponseDto;
-import br.com.peoplemanager.exception.PersonErrorException;
-import br.com.peoplemanager.repository.PersonRepository;
+import br.com.peoplemanager.dto.person.PersonDto;
 import br.com.peoplemanager.service.PersonService;
 import jakarta.validation.Valid;
-import jakarta.validation.Validation;
-import jakarta.validation.Validator;
-import jakarta.websocket.server.PathParam;
-import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
-import org.springframework.validation.BeanPropertyBindingResult;
 import org.springframework.validation.BindingResult;
-import org.springframework.validation.annotation.Validated;
 import org.springframework.web.bind.annotation.*;
-import org.springframework.web.server.ResponseStatusException;
 import org.springframework.web.servlet.support.ServletUriComponentsBuilder;
 
-import java.net.URI;
 import java.util.List;
-import java.util.Objects;
 
 @RestController
 @RequestMapping("/person")
@@ -33,8 +20,8 @@ public class PersonController {
         this.personService = personService;
     }
     @PostMapping
-    public ResponseEntity<Void> savePerson(@RequestBody @Valid PersonRequestDto personRequestDto, BindingResult bindingResult) {
-        validPersonRequest(bindingResult);
+    public ResponseEntity<Void> savePerson(@RequestBody @Valid PersonDto personRequestDto, BindingResult bindingResult) {
+        ValidRequest.valid(bindingResult);
         Long idPersonSaved = personService.savePerson(personRequestDto);
         return ResponseEntity
                 .created(ServletUriComponentsBuilder
@@ -45,26 +32,16 @@ public class PersonController {
     }
 
     @PutMapping("/{personId}")
-    public ResponseEntity<Void> updatePerson(@RequestBody @Valid PersonRequestDto personRequestDto,
+    public ResponseEntity<Void> updatePerson(@RequestBody @Valid PersonDto personRequestDto,
                                            @PathVariable("personId") Long personId, BindingResult bindingResult) {
-        validPersonRequest(bindingResult);
+        ValidRequest.valid(bindingResult);
         personService.updatePerson(personRequestDto, personId);
         return ResponseEntity.ok().build();
     }
 
     @GetMapping()
-    public ResponseEntity<List<PersonResponseDto>> ListPerson(
+    public ResponseEntity<List<PersonDto>> getPersons(
             @RequestParam(defaultValue = "") String names) {
-        List<PersonResponseDto> listToResponse = personService.listPerson(names);
-        return ResponseEntity.ok().body(listToResponse);
+        return ResponseEntity.ok().body(personService.listPerson(names));
     }
-
-    private void validPersonRequest(BindingResult bindingResult) {
-        if (bindingResult.hasErrors()) {
-            final String error = bindingResult.getAllErrors().get(0).getDefaultMessage();
-            final String field = bindingResult.getFieldErrors().get(0).getField();
-            throw new PersonErrorException(field.concat(": ").concat(Objects.requireNonNull(error)));
-        }
-    }
-
 }
