# src/main/java/br/com/peoplemanager/dto/person/PersonResponseDto.java
@@ -1,15 +1,0 @@
-package br.com.peoplemanager.dto.person;
-
-import lombok.AllArgsConstructor;
-import lombok.Builder;
-import lombok.Data;
-import lombok.NoArgsConstructor;
-
-@Data
-@AllArgsConstructor
-@NoArgsConstructor
-@Builder
-public class PersonResponseDto {
-    private String fullName;
-    private String birthDate;
-}
