# src/main/java/br/com/peoplemanager/entity/Address.java
@@ -1,0 +1,35 @@
+package br.com.peoplemanager.entity;
+
+import jakarta.persistence.*;
+import lombok.AllArgsConstructor;
+import lombok.Builder;
+import lombok.Data;
+import lombok.NoArgsConstructor;
+
+@Entity
+@AllArgsConstructor
+@NoArgsConstructor
+@Data
+@Builder
+public class Address {
+
+    @Id
+    @GeneratedValue(strategy = GenerationType.IDENTITY)
+    @Column(name = "ADDRESS_ID")
+    private Long addressId;
+    @ManyToOne
+    @JoinColumn(name = "PERSON_ID")
+    private Person person;
+    @Column(name = "STREET")
+    private String street;
+    @Column(name = "ZIP_CODE")
+    private String zipCode;
+    @Column(name = "NUMBER")
+    private String number;
+    @Column(name = "CITY")
+    private String city;
+    @Column(name = "STATE")
+    private String state;
+    @Column(name = "PRINCIPAL")
+    private Boolean principal;
+}
